crates/plotnik-lib/tests/03-analyze/undefined_ref.txt
Main = (array (Missing) @item)
------------------ DIAGNOSTICS -------------------
error: `Missing` is not defined
 --> query.ptk:1:16
  |
1 | Main = (array (Missing) @item)
  |                ^^^^^^^
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling
-------------------- SYMBOLS ---------------------
Main
  Missing?
